# datadoggo

./: .dockerignore  .env  .env.firecrawl  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  feeds.yaml
.github/workflows/: cargo-test.yml  claude-code-review.yml  claude.yml  test.yml
data/: feeds.yaml
docs/: 001_cargo_testが2重で実行される問題.txt  todo.md
docs/issue/: 001_rename_rss_link_to_article_link.md  002_enable_auto_cargo_fmt.md  003_refactor_article_module.md  005_unify_sql_dirs_or_document_constraints.md  006_article-re-design.md  article.md
docs/memo/: 001_cargo_testが2重で実行される問題.txt
fixtures/: article_backlog.sql  article_basic.sql  article_query_filter.sql  article_unprocessed.sql  duplicate_articles.sql  rss.sql  rss_backlog.sql  workflow.sql  workflow_large.sql  workflow_mixed.sql
migrations/: 001_create_article_links.sql  001_create_articles.sql  001_create_rss_articles.sql  001_create_rss_links.sql  002_create_articles.sql  002_create_firecrawl_articles.sql  003_rebuild_firecrawl_articles.sql
mock/fc/: bbc.json  cbs.json
mock/rss/: bbc.rss  cbs.rss  guardian.rss
scripts/: reset_migrate.sh
sql/: README.md
src/: app.rs  article.rs  db.rs  db_writer.rs  firecrawl.rs  firecrawl_db_writer.rs  firecrawl_reader.rs  lib.rs  main.rs  rss.rs  rss_db_writer.rs  rss_reader.rs
src/app/: mod.rs  workflow.rs
src/core/: feed.rs  rss.rs
src/domain/: article.rs  feed.rs  firecrawl.rs  mod.rs  rss.rs
src/fixtures/: duplicate_articles.sql  rss.sql  (+4 more)
tests/: mock_server.rs  test_mode_controller.rs
(+35 files in other folders)
