[package]
name = "datadoggo"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rss = "2.0"
dotenvy = "0.15"

[dev-dependencies]
ctor = "0.2"
