[package]
name = "datadoggo"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "chrono"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rss = "2.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ctor = "0.2"
