[package]
name = "datadoggo"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rss = "2.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.2"
thiserror = "1.0"
anyhow = "1.0"
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
ctor = "0.2"

[lints.rust]
dead_code = "allow"
